# arek-wm

./: AUTHORS  Makefile.am  README.md  autogen.sh  common.mk  configure.ac  structure.txt
data/: Makefile.am  com.unia.arek.wm.gschema.xml
src/: Makefile.am  arek-wm.c  arek-wm.h  background.c  background.h  keybindings.c  keybindings.h  main.c  meta-wrapper.c  meta-wrapper.h  tile.c  tile.h  windowlist.c  windowlist.h  workspace.c  workspace.h
